+ = Addded
- = Removed
* = Fixed
~ = Changed

0.9.7
+ Pickpocket bypass permission (pickpocket.bypass)
+ Pickpocket admin permission (pickpocket.admin) which logs extra info to admins.

0.9.6
* Severe inventory bug that rendered the plugin almost unplayable.
* Item Duplication bug
* Profile duplication bug.
~ Refactoring

0.9.5
+ Flint
+ Gunpowder
+ Gold nugget
+ Leather
+ Feather
+ Bone
+ String
+ Rotten Flesh
+ Spider Eye
+ Fermented Spider Eye
+ Slimeball
+ Ender Pearl
+ Eye of Ender
+ Blaze Rod
+ Blaze Powder
+ Magma Cream
+ Ghast Tear
+ Brewing Stand
+ Nether Wart
+ Glass Bottle
+ Bow
+ Arrow
+ Fishing Rod
+ Shears
+ Flint and Steel
+ Compass
+ Clock
+ Wooden Sword
+ Wooden Pickaxe
+ Wooden Axe
+ Wooden Shovel
+ Wooden Hoe
+ Stone Sword
+ Stone Pickaxe
+ Stone Axe
+ Stone Shovel
+ Stone Hoe
+ Iron Sword
+ Iron Pickaxe
+ Iron Axe
+ Iron Shovel
+ Iron Hoe
+ Golden Sword
+ Golden Pickaxe
+ Golden Axe
+ Golden Shovel
+ Golden Hoe
+ Diamond Sword
+ Diamond Pickaxe
+ Diamond Shovel
+ Diamond Hoe

0.9.0
+ A lot more pickpocket items.
+ Equation to determine chance of items.
~ Pickpocket item inventory has pages.
* Can't pickpocket when you close the inventory before a steal.

0.7.8
* Cooldown throwing console errors.
* Experience not saving correctly.
* Can't steal items that aren't added to pickpocket.
+ Experience affects the chance of success.
+ More pickpocket items.
+ '/pickpocket givexp <xp>' to give yourself experience.
~ Lowered chances of pickpocket items.
~ Equation for determining xp worth of an item.
~ '/pickpocket profiles' shows profiles with respective experience

0.5.5
- Added cooldown.
- Added new pickpocket item 'Lapis Lazuli'.
- Added experience and levels.

0.5
- First Bukkit Release.